--- a/pr/347/learn/intrinsics/DBLE.html
+++ b/pr/347/learn/intrinsics/DBLE.html
@@ -44968,7 +44968,7 @@
 </span></code></pre></div></div>
 <h2 id="description"><strong>Description</strong></h2>
 
-<p><strong>dble(a)</strong> Converts A to double precision real type.</p>
+<p><strong>dble(a)</strong> Converts <strong>a</strong> to double precision real type.</p>
 
 <h2 id="arguments"><strong>Arguments</strong></h2>
 
