--- a/pr/347/learn/intrinsics/EXTENDS_TYPE_OF.html
+++ b/pr/347/learn/intrinsics/EXTENDS_TYPE_OF.html
@@ -45039,7 +45039,7 @@ pointer or unallocated allocatable variable, the result is
 true; otherwise if <strong>a</strong> is unlimited polymorphic and is either a
 disassociated pointer or unallocated allocatable variable, the result
 is false; otherwise the result is true if and only if the dynamic
-type of <em>A</em> is an extension type of the dynamic type of <strong>mold</strong>.</dd>
+type of <strong>a</strong> is an extension type of the dynamic type of <strong>mold</strong>.</dd>
     </dl>
 
     <p>The dynamic type of a disassociated pointer or unallocated
