--- a/pr/347/learn/intrinsics/LLT.html
+++ b/pr/347/learn/intrinsics/LLT.html
@@ -45078,7 +45078,7 @@
 
 <p>Determines whether one string is lexically less than another string,
 where the two strings are interpreted as containing ASCII character
-codes. If the String A and String B are not the same length, the shorter
+codes. If the <strong>string_a</strong> and <strong>string_b</strong> are not the same length, the shorter
 is compared as if spaces were appended to it to form a value that has
 the same length as the longer.</p>
 
@@ -45116,7 +45116,9 @@ on the ASCII ordering.</p>
 
 <h2 id="see-also"><strong>See Also</strong></h2>
 
-<p><strong>[[lge</strong>(3), <strong>[[lgt</strong>(3), <strong>[[lle</strong>(3)</p>
+<p><a href="LGE"><strong>lge</strong>(3)</a>,
+<a href="LGT"><strong>lgt</strong>(3)</a>,
+<a href="LLE"><strong>lle</strong>(3</a>)</p>
 
 <p>Functions that perform operations on character strings, return lengths
 of arguments, and search for certain arguments:</p>
