--- a/pr/347/learn/intrinsics/MOD.html
+++ b/pr/347/learn/intrinsics/MOD.html
@@ -45136,7 +45136,7 @@ zero.</dd>
 
 <p>The return value is the result of <strong>a - (int(a/p) * p)</strong>. The type and kind
 of the return value is the same as that of the arguments. The returned
-value has the same sign as A and a magnitude less than the magnitude of
+value has the same sign as <strong>a</strong> and a magnitude less than the magnitude of
 <strong>p</strong>.</p>
 
 <h2 id="examples"><strong>Examples</strong></h2>
