--- a/pr/347/learn/intrinsics/NEAREST.html
+++ b/pr/347/learn/intrinsics/NEAREST.html
@@ -45159,6 +45159,16 @@ smaller than <strong>x</strong> and nearest to it.</p>
    </span><span class="n">y</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="nb">nearest</span><span class="p">(</span><span class="mf">42.0</span><span class="p">,</span><span class="w"> </span><span class="mf">-1.0</span><span class="p">)</span><span class="w">
    </span><span class="k">write</span><span class="w"> </span><span class="p">(</span><span class="o">*</span><span class="p">,</span><span class="s2">"(3(g20.15))"</span><span class="p">)</span><span class="w"> </span><span class="n">x</span><span class="p">,</span><span class="w"> </span><span class="n">y</span><span class="p">,</span><span class="w"> </span><span class="n">x</span><span class="w"> </span><span class="o">-</span><span class="w"> </span><span class="n">y</span><span class="w">
 
+</span><span class="c1">!  write (*,"(3(g20.15))") &amp;</span><span class="w">
+</span><span class="c1">!   nearest(tiny(0.0),1.0), &amp;</span><span class="w">
+</span><span class="c1">!   nearest(tiny(0.0),-1.0), &amp;</span><span class="w">
+</span><span class="c1">!   nearest(tiny(0.0),1.0) -nearest(tiny(0.0),-1.0)</span><span class="w">
+
+</span><span class="c1">!  write (*,"(3(g20.15))") &amp;</span><span class="w">
+</span><span class="c1">!   nearest(huge(0.0),1.0), &amp;</span><span class="w">
+</span><span class="c1">!   nearest(huge(0.0),-1.0), &amp;</span><span class="w">
+</span><span class="c1">!   nearest(huge(0.0),1.0)- nearest(huge(0.0),-1.0)</span><span class="w">
+
 </span><span class="k">end</span><span class="w"> </span><span class="k">program</span><span class="w"> </span><span class="n">demo_nearest</span><span class="w">
 </span></code></pre></div></div>
 <p>Results:</p>
