--- a/pr/347/learn/intrinsics/SELECTED_INT_KIND.html
+++ b/pr/347/learn/intrinsics/SELECTED_INT_KIND.html
@@ -45217,6 +45217,15 @@ this range, selected_int_kind returns <strong>-1</strong>.</p>
 
 <p>Fortran 95 and later</p>
 
+<h2 id="see-also"><strong>See Also</strong></h2>
+
+<p><a href="AINT"><strong>aint</strong>(3)</a>,
+<a href="ANINT"><strong>anint</strong>(3)</a>,
+<a href="INT"><strong>int</strong>(3)</a>,
+<a href="NINT"><strong>nint</strong>(3)</a>,
+<a href="CEILING"><strong>ceiling</strong>(3)</a>,
+<a href="FLOOR"><strong>floor</strong>(3)</a></p>
+
 <h6 id="fortran-lang-intrinsic-descriptions">fortran-lang intrinsic descriptions</h6>
 
 
