--- a/pr/347/learn/intrinsics/SIGN.html
+++ b/pr/347/learn/intrinsics/SIGN.html
@@ -45188,20 +45188,20 @@
 </span></code></pre></div></div>
 <h2 id="description"><strong>Description</strong></h2>
 
-<p><strong>sign</strong>(a,b) returns the value of A with the sign of B.</p>
+<p><strong>sign</strong>(a,b) returns the value of <strong>a</strong> with the sign of <strong>b</strong>.</p>
 
 <h2 id="arguments"><strong>Arguments</strong></h2>
 
 <ul>
   <li>
     <dl>
-      <dt><strong>A</strong></dt>
+      <dt><strong>a</strong></dt>
       <dd>Shall be of type <em>integer</em> or <em>real</em></dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>B</strong></dt>
+      <dt><strong>b</strong></dt>
       <dd>Shall be of the same type and kind as A</dd>
     </dl>
   </li>
@@ -45209,8 +45209,8 @@
 
 <h2 id="returns"><strong>Returns</strong></h2>
 
-<p>The kind of the return value is that of A and B. If B &gt;= 0 then the
-result is <strong>abs</strong>(a), else it is -__abs__(a).</p>
+<p>The kind of the return value is that of <strong>a</strong> and <strong>b</strong>. If <strong>b &gt;= 0</strong> then the
+result is <strong>abs(a)</strong>, else it is -__abs(a)__.</p>
 
 <h2 id="examples"><strong>Examples</strong></h2>
 
