--- a/pr/347/learn/intrinsics/VERIFY.html
+++ b/pr/347/learn/intrinsics/VERIFY.html
@@ -45248,6 +45248,14 @@ not in <strong>set</strong>.</p>
 
 <p>If all characters of <strong>string</strong> are found in <strong>set</strong>, the result is zero.</p>
 
+<p>This makes it easy to verify strings are all uppercase or lowercase, 
+follow a basic syntax, only contain printable characters, and many of the
+conditions tested for with the C routines
+<strong>isalnum</strong>(3c), <strong>isalpha</strong>(3c), <strong>isascii</strong>(3c), <strong>isblank</strong>(3c),
+<strong>iscntrl</strong>(3c), <strong>isdigit</strong>(3c), <strong>isgraph</strong>(3c), <strong>islower</strong>(3c),
+<strong>isprint</strong>(3c), <strong>ispunct</strong>(3c), <strong>isspace</strong>(3c), <strong>isupper</strong>(3c),
+and <strong>isxdigit</strong>(3c); but for a string as well an an array of characters.</p>
+
 <h2 id="arguments"><strong>Arguments</strong></h2>
 
 <ul>
