--- a/pr/347/learn/intrinsics/ATOMIC_CAS.html
+++ b/pr/347/learn/intrinsics/ATOMIC_CAS.html
@@ -44940,7 +44940,9 @@ value is converted to the kind of <strong>atom</strong>.</dd>
 
 <h2 id="see-also"><strong>See Also</strong></h2>
 
-<p><strong>atomic_define</strong>(3), <strong>atomic_ref</strong>(3), <strong>iso_fortran_env</strong>(3)</p>
+<p><a href="ATOMIC_DEFINE"><strong>atomic_define</strong>(3)</a>,
+<a href="ATOMIC_REF"><strong>atomic_ref</strong>(3)</a>,
+<a href=""><strong>iso_fortran_env</strong>(3)</a></p>
 
 <h6 id="fortran-lang-intrinsic-descriptions">fortran-lang intrinsic descriptions</h6>
 
