--- a/pr/347/learn/intrinsics/ATOMIC_FETCH_OR.html
+++ b/pr/347/learn/intrinsics/ATOMIC_FETCH_OR.html
@@ -44940,9 +44940,14 @@ is converted to the kind of <strong>atom</strong>.</dd>
 
 <h2 id="see-also"><strong>See Also</strong></h2>
 
-<p><strong>atomic_define</strong>(3), <strong>atomic_or</strong>(3), <strong>iso_fortran_env</strong>(3),
-<strong>atomic_fetch_add</strong>(3), <strong>atomic_fetch_and</strong>(3),
-<strong>atomic_fetch_xor</strong>(3)</p>
+<p><a href="ATOMIC_DEFINE"><strong>atomic_define</strong>(3)</a>,
+<a href="ATOMIC_OR"><strong>atomic_or</strong>(3)</a>,
+<a href=""><strong>iso_fortran_env</strong>(3)</a>,</p>
+
+<p><a href="ATOMIC_FETCH_ADD"><strong>atomic_fetch_add</strong>(3)</a>,
+<a href="ATOMIC_FETCH_AND"><strong>atomic_fetch_and</strong>(3)</a>,</p>
+
+<p><a href="ATOMIC_FETCH_XOR"><strong>atomic_fetch_xor</strong>(3)</a></p>
 
 <h6 id="fortran-lang-intrinsic-descriptions">fortran-lang intrinsic descriptions</h6>
 
