--- a/pr/347/learn/intrinsics/ATOMIC_REF.html
+++ b/pr/347/learn/intrinsics/ATOMIC_REF.html
@@ -44946,9 +44946,15 @@ kind.</dd>
 
 <h2 id="see-also"><strong>See Also</strong></h2>
 
-<p><strong>atomic_define</strong>(3), <strong>atomic_cas</strong>(3), <strong>iso_fortran_env</strong>(3),
-<strong>atomic_fetch_add</strong>(3), <strong>atomic_fetch_and</strong>(3),
-<strong>atomic_fetch_or</strong>(3), <strong>atomic_fetch_xor</strong>(3)</p>
+<p><a href="ATOMIC_DEFINE"><strong>atomic_define</strong>(3)</a>,
+<a href="ATOMIC_CAS"><strong>atomic_cas</strong>(3)</a>,
+<a href=""><strong>iso_fortran_env</strong>(3)</a>,</p>
+
+<p><a href="ATOMIC_ADD"><strong>atomic_fetch_add</strong>(3)</a>,
+<a href="ATOMIC_AND"><strong>atomic_fetch_and</strong>(3)</a>,</p>
+
+<p><a href="ATOMIC_OR"><strong>atomic_fetch_or</strong>(3)</a>,
+<a href="ATOMIC_XOR"><strong>atomic_fetch_xor</strong>(3)</a></p>
 
 <h6 id="fortran-lang-intrinsic-descriptions">fortran-lang intrinsic descriptions</h6>
 
