--- a/pr/347/learn/intrinsics/ATOMIC_XOR.html
+++ b/pr/347/learn/intrinsics/ATOMIC_XOR.html
@@ -44941,9 +44941,12 @@ is converted to the kind of <strong>atom</strong>.</dd>
 
 <h2 id="see-also"><strong>See Also</strong></h2>
 
-<p><strong>atomic_define</strong>(3), <strong>atomic_fetch_xor</strong>(3),
-<strong>iso_fortran_env</strong>(3), <strong>atomic_add</strong>(3), <strong>atomic_or</strong>(3),
-<strong>atomic_xor</strong>(3)</p>
+<p><a href="ATOMIC_DEFINE"><strong>atomic_define</strong>(3)</a>,
+<a href="ATOMIC_FETCH"><strong>atomic_fetch_xor</strong>(3)</a>,
+<a href=""><strong>iso_fortran_env</strong>(3)</a>,
+<a href="ATOMIC_ADD"><strong>atomic_add</strong>(3)</a>,
+<a href="ATOMIC_OR"><strong>atomic_or</strong>(3)</a>,
+<a href="ATOMIC_XOR"><strong>atomic_xor</strong>(3)</a></p>
 
 <h6 id="fortran-lang-intrinsic-descriptions">fortran-lang intrinsic descriptions</h6>
 
