--- a/pr/347/learn/intrinsics/IALL.html
+++ b/pr/347/learn/intrinsics/IALL.html
@@ -45092,7 +45092,7 @@ dropped is returned.</p>
 
 <h2 id="see-also"><strong>See Also</strong></h2>
 
-<p><a href="IANY"><strong>iany</strong>(3),</a>
+<p><a href="IANY"><strong>iany</strong>(3)</a>,
 <a href="IPARITY"><strong>iparity</strong>(3)</a>,
 <a href="IAND"><strong>iand</strong>(3)</a></p>
 
