Jekyll build, commit 8eba6eebb292888e44d42fa225b13106b8c6b531 (on:push)

--- a/compilers/index.html
+++ b/compilers/index.html
@@ -284,6 +284,14 @@ Silverfrost Fortran runs on Windows / x86_64. There is a free personal edition.<
 conforms to the Fortran-2003 standard (ISO/IEC 1539-1:2004) and supports many
 features from Fortran-2008 (ISO/IEC 1539-1:2010).</p>
 
+<h3 id="lcc">LCC</h3>
+
+<p><a href="http://mcst.ru/lcc">MCST C, C++, Fortran Compiler</a> with full support of Fortran-95
+(ISO/IEC 1539:1997) and partial support of Fortran-2003 (ISO/IEC 1539:2004),
+Fortran-2008 (ISO/IEC 1539:2010) and Fortran-2018 (ISO/IEC 1539:2018). Used for
+russian processor architectures Elbrus (e2k) and SPARC (MCST-R), also a cross-compiler
+for x86_64 architecture is available.</p>
+
 <h2 id="discontinued">Discontinued</h2>
 
 <p>The following is a list of Fortran compilers that seem discontinued, so we do
