Jekyll build, commit 1ced13f98982e804f7a68133040493a72a2cd145 (on:push)

--- a/packages/index.html
+++ b/packages/index.html
@@ -137,7 +137,7 @@
         </p>
         <p>
         See
-	        <a href="https://github.com/fortran-lang/fortran-lang.org/blob/master/PACKAGES.md" target="_blank">
+	        <a href="https://github.com/fortran-lang/fortran-lang.org/blob/HEAD/PACKAGES.md" target="_blank">
           <i class="devicon-github-plain colored"></i> here</a> for how to get your project listed.
         </p>
         <p>
@@ -572,7 +572,7 @@
     <div class="col-wide">
       
      See
-	  <a href="https://github.com/fortran-lang/fortran-lang.org/blob/master/PACKAGES.md" target="_blank">
+	  <a href="https://github.com/fortran-lang/fortran-lang.org/blob/HEAD/PACKAGES.md" target="_blank">
           <i class="devicon-github-plain colored"></i> here</a> for how to get your project listed.
 
   </div>
