--- a/packages/programming.html
+++ b/packages/programming.html
@@ -748,7 +748,7 @@
         <!-- <h2 id="faqs">FAQ</h2> -->
         
         See
-	  <a href="https://github.com/fortran-lang/fortran-lang.org/blob/master/PACKAGES.md" target="_blank">
+	  <a href="https://github.com/fortran-lang/fortran-lang.org/blob/HEAD/PACKAGES.md" target="_blank">
       <i class="devicon-github-plain colored"></i> here</a> for how to get your project listed.
   
     </div>
