Jekyll build, preview pr/362 (on:pull_request)

--- a/pr/362/learn/index.html
+++ b/pr/362/learn/index.html
@@ -270,7 +270,7 @@
       
       <li>
         <a href="https://wg5-fortran.org/" target="_blank"><b>
-          WG5: International Fortran Standards committee
+          WG5: International Fortran Standards Committee
         </b></a>
         
       </li>
