Jekyll build, commit 6055835a1f26b56d175b99af5f46078def5542ce (on:push)

--- a/packages/programming.html
+++ b/packages/programming.html
@@ -373,7 +373,7 @@
                 
                 <i class="devicon-bitbucket-plain colored"></i>
                 
-                foryxima</a></h3> </td>
+                fortyxima</a></h3> </td>
               <td> 
               </td>
               <td> 
