--- a/learn/index.html
+++ b/learn/index.html
@@ -258,7 +258,7 @@
       
       <li>
         <a href="https://wg5-fortran.org/" target="_blank"><b>
-          WG5: International Fortran Standards Committe
+          WG5: International Fortran Standards Committee
         </b></a>
         
       </li>
