--- a/packages/interfaces.html
+++ b/packages/interfaces.html
@@ -549,7 +549,7 @@
                 
                 <i class="devicon-bitbucket-plain colored"></i>
                 
-                foryxima</a></h3> </td>
+                fortyxima</a></h3> </td>
               <td> 
               </td>
               <td> 
