Jekyll build, commit 045163001cdd4c9475a69f22400095b05d50f661 (on:push)

--- a/learn/index.html
+++ b/learn/index.html
@@ -306,6 +306,13 @@
       </li>
       
       <li>
+        <a href="https://www.youtube.com/playlist?list=PLRO4xf5MdhAv9CNTETor75rANZtBqPVgQ" target="_blank"><b>
+          The 'F' Word - Programming in Fortran
+        </b></a>
+        modern Fortran for developing an extensible library that can be used to solve conservation laws (PDEs) using spectral and spectral element methods
+      </li>
+      
+      <li>
         <a href="https://www.bccms.uni-bremen.de/cms/people/b-aradi/wissen-progr/modern-fortran/2017" target="_blank"><b>
           Kursmaterial für Wissenschaftliches Programmieren (Modern Fortran, 2017)
         </b></a>
