Jekyll build, commit 540614b10ffab4e1df278da7eefa191daedeaa89 (on:push)

--- a/learn/os_setup/text_editors.html
+++ b/learn/os_setup/text_editors.html
@@ -666,24 +666,16 @@
 <h2 id="configuring-vs-code">Configuring VS Code</h2>
 
 <p>With the editor opened, at the main UI, at the buttoned-column on the left, there is a <em>four-square-shaped</em> icon to open the Marketplace for extensions. 
-The following extensions are suggested for Fortran developement:</p>
-<ul>
-  <li><a href="https://marketplace.visualstudio.com/items?itemName=krvajalm.linter-gfortran">Modern Fortran by Miguel Carvajal</a></li>
-  <li><a href="https://marketplace.visualstudio.com/items?itemName=hansec.fortran-ls">FORTRAN IntelliSense by Chris Hansen</a>
-    <ul>
-      <li>Depends on the previous <em>Modern Fortran</em> extension, as well as <a href="https://www.python.org/">Python</a> and <a href="https://github.com/hansec/fortran-language-server">Fortran Language Server</a>, which need to be installed.</li>
-    </ul>
-  </li>
-  <li><a href="https://marketplace.visualstudio.com/items?itemName=ekibun.fortranbreaker">Fortran Breakpoint Support by ekibun</a></li>
-</ul>
+Install <a href="https://marketplace.visualstudio.com/items?itemName=krvajalm.linter-gfortran">Modern Fortran</a> for syntax highlighting, linting and Language Server support and formatting.</p>
 
-<p><em>Note: Both Modern Fortran and Fortran Breakpoint Support require ms-vscode.cpptools, for that you will also need to install the <a href="https://marketplace.visualstudio.com/items?itemName=ms-vscode.cpptools">C/C++ by Microsoft</a> extension.</em></p>
+<h3 id="additional-tools">Additional Tools</h3>
 
-<p>The following are not essential but more advanced users might find useful:</p>
+<p>The following extensions are not essential but most users might find them useful:</p>
+
 <ul>
-  <li><a href="https://marketplace.visualstudio.com/items?itemName=ms-vscode-remote.remote-wsl">Remote - WSL by Microsoft</a></li>
-  <li><a href="https://marketplace.visualstudio.com/items?itemName=eamodio.gitlens">GitLens - Git supercharged by Eric Amodio</a></li>
-  <li><a href="https://marketplace.visualstudio.com/items?itemName=Blamsoft.fprettify">fprettify by Blamsoft</a></li>
+  <li><a href="https://marketplace.visualstudio.com/items?itemName=eamodio.gitlens">GitLens</a> for advanced Git visualization and operations.</li>
+  <li><a href="https://marketplace.visualstudio.com/items?itemName=ms-vscode.cmake-tools">CMake</a> for full-featured CMake integration in VS Code.</li>
+  <li><a href="https://marketplace.visualstudio.com/items?itemName=ms-vscode-remote.vscode-remote-extensionpack">Remote Development</a> for working with containers, on a remote machines, or in the Windows Subsystem for Linux (WSL).</li>
   <li><a href="https://marketplace.visualstudio.com/items?itemName=tamasfe.even-better-toml">Even Better TOML by tamasfe</a>. For Fortran developers that are using the new <a href="https://github.com/fortran-lang/fpm">fpm</a> <em>Fortran Package Manager</em>, a TOML language support might come in handy.</li>
 </ul>
 
