Jekyll build, commit b81fe4135e8bf6c0a7343160fc166eb9be72d429 (on:push)

--- a/learn/best_practices/allocatable_arrays.html
+++ b/learn/best_practices/allocatable_arrays.html
@@ -921,7 +921,7 @@
         
       </div>
 
-      <p>The <code class="highlighter-rouge">allocatable</code> attribute provides safe way for memory handling.
+      <p>The <code class="highlighter-rouge">allocatable</code> attribute provides a safe way for memory handling.
 In comparison to variables with <code class="highlighter-rouge">pointer</code> attribute the memory is managed
 automatically and will be deallocated automatically once the variable goes
 out-of-scope. Using <code class="highlighter-rouge">allocatable</code> variables removes the possibility to
