--- a/learn/best_practices/floating_point.html
+++ b/learn/best_practices/floating_point.html
@@ -910,7 +910,7 @@
       </div>
 
       <p>The default representation of floating point numbers is using single precision
-(usually 32 bits / 4 bytes). For most application a higher precision is required.
+(usually 32 bits / 4 bytes). For most applications a higher precision is required.
 For this purpose a custom kind parameter can be defined.
 The recommended way of defining kind parameters is to use</p>
 
@@ -987,7 +987,7 @@ point number by:</p>
 </span></code></pre></div></div>
 
 <p>To print floating point numbers without losing precision use the unlimited
-format specificer <code class="highlighter-rouge">(g0)</code> or the exponential representation <code class="highlighter-rouge">(es24.16e3)</code>,
+format specifier <code class="highlighter-rouge">(g0)</code> or the exponential representation <code class="highlighter-rouge">(es24.16e3)</code>,
 which will give you 17 significant digits of printout.</p>
 
 
