Jekyll build, preview pr/369 (on:pull_request)

--- a/pr/369/learn/best_practices/file_io.html
+++ b/pr/369/learn/best_practices/file_io.html
@@ -980,7 +980,7 @@ of a file prior to opening it the <code class="highlighter-rouge">inquire</code>
 </span><span class="k">end</span><span class="w"> </span><span class="k">if</span><span class="w">
 </span></code></pre></div></div>
 
-<p>Note that <em>iomsg</em> requires a fixed-length character variable with sufficent storage
+<p>Note that <em>iomsg</em> requires a fixed-length character variable with sufficient storage
 size to hold the error message.</p>
 
 <p>Similarly, writing to a file happens by using the <em>status</em> and <em>action</em> keyword.
