--- a/source/_templates/index.html
+++ b/source/_templates/index.html
@@ -131,46 +131,14 @@
          </div>
       </nav>
       <div class="container-xl">
+      <center>
+         <br> <br>
+         <h1>High-performance parallel programming language</h1>
+         <p><a href="learn/index.html" class="btn get_started" >Get started</a></p>
+      </center>
       <div class="row">
-         <div class="d-none d-xl-block col-xl-4 py-md-2 bd-toc fortran_sidebar">
-            <h2><i class="far fa-newspaper"></i> News</h2>
-            <p><a href="news/index.html">More…</a></p>
-            </br>
-            <a class="twitter-timeline" data-height="500" href="https://twitter.com/fortranlang?ref_src=twsrc%5Etfw"></a>
-            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-            </br> 
-            <div class="col-narrow">
-               <h2 id="chat">Join us!</h2>
-               <h3> <i class="fas fa-envelope-open-text"></i> Mailing list</h3>
-               <p>Subscribe to our <a href="https://groups.io/g/fortran-lang" target="_blank">mailing list</a>
-                  to discuss anything Fortran related, announce Fortran projects, discuss development
-                  of core fortran-lang.org projects (stdlib, fpm), and get
-                  the latest news.
-               </p>
-               <h3><i class="fab fa-discourse"></i> Discourse</h3>
-               <p>
-                  Join the discussion about all things Fortran on the 
-                  <a href="https://fortran-lang.discourse.group" target="_blank">fortran-lang discourse.</a>
-               </p>
-               <h3><i class="fab fa-twitter"></i> Twitter</h3>
-               <a href="https://twitter.com/fortranlang" class="twitter-follow-button" data-show-count="true" data-size="large">@fortranlang</a>
-               <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-               <h3><i class="fas fa-rss"></i> RSS feed</h3>
-               <p>RSS clients can follow the <a href="news.xml" target="_blank">RSS feed</a>.</p>
-               <h3><i class="fab fa-github"></i> Open source</h3>
-               <p>
-                  Contribute code, report bugs and request features at
-                  <a href="https://github.com/fortran-lang" target="_blank" >GitHub</a>.
-               </p>
-            </div>
-         </div>
          <main class="col-13 col-md-10 col-xl-8 py-md-8 pl-md-8 pr-md-7 bd-content fortran_scroll" role="main">
             <div>
-               <center>
-                  <br>
-                  <h1>High-performance parallel programming language</h1>
-                  <p><a href="learn/index.html" class="btn get_started" >Get started</a></p>
-               </center>
                <section class="front-section">
                   <div class="container bd-content">
                      <div class="col-wide">
@@ -277,6 +245,39 @@
                   </a>
                </div>
          </main>
+         <div class="d-none d-xl-block col-xl-4 py-md-2 bd-content col-narrow fortran_sidebar">
+         <br><br><br>
+         <h2><i class="far fa-newspaper"></i> News</h2>
+         <p><a href="news/index.html">More…</a></p>
+         </br>
+         <a class="twitter-timeline" data-height="500" href="https://twitter.com/fortranlang?ref_src=twsrc%5Etfw"></a>
+         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+         </br> 
+         <div class="col-narrow">
+         <h2 id="chat">Join us!</h2>
+         <h3> <i class="fas fa-envelope-open-text"></i> Mailing list</h3>
+         <p>Subscribe to our <a href="https://groups.io/g/fortran-lang" target="_blank">mailing list</a>
+         to discuss anything Fortran related, announce Fortran projects, discuss development
+         of core fortran-lang.org projects (stdlib, fpm), and get
+         the latest news.
+         </p>
+         <h3><i class="fab fa-discourse"></i> Discourse</h3>
+         <p>
+         Join the discussion about all things Fortran on the 
+         <a href="https://fortran-lang.discourse.group" target="_blank">fortran-lang discourse.</a>
+         </p>
+         <h3><i class="fab fa-twitter"></i> Twitter</h3>
+         <a href="https://twitter.com/fortranlang" class="twitter-follow-button" data-show-count="true" data-size="large">@fortranlang</a>
+         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+         <h3><i class="fas fa-rss"></i> RSS feed</h3>
+         <p>RSS clients can follow the <a href="news.xml" target="_blank">RSS feed</a>.</p>
+         <h3><i class="fab fa-github"></i> Open source</h3>
+         <p>
+         Contribute code, report bugs and request features at
+         <a href="https://github.com/fortran-lang" target="_blank" >GitHub</a>.
+         </p>
+         </div>
+         </div>
          </div>
       </div>
       <!-- Scripts loaded after <body> so the DOM is not blocked -->
