--- a/source/_templates/docs-navbar.html
+++ b/source/_templates/docs-navbar.html
@@ -2,7 +2,7 @@
   <div class="container-xl">
      <div id="navbar-start">
         <a class="navbar-brand" href="https://henilp105.github.io/fortran-lang.org/">
-        <img src="_static/images/fortran-logo-256x256.png" class="logo" alt="logo">
+        <img src="https://henilp105.github.io/fortran-lang.org/_static/images/fortran-logo-256x256.png" class="logo" alt="logo">
         </a>
      </div>
      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapsible" aria-controls="navbar-collapsible" aria-expanded="false" aria-label="Toggle navigation">
