--- a/source/_templates/index.html
+++ b/source/_templates/index.html
@@ -248,7 +248,7 @@
          <div class="d-none d-xl-block col-xl-4 py-md-2 bd-content col-narrow fortran_sidebar">
          <br><br><br>
          <h2><i class="far fa-newspaper"></i> News</h2>
-         <p><a href="news/index.html">More…</a></p>
+         <p><a href="news.html">More…</a></p>
          </br>
          <a class="twitter-timeline" data-height="500" href="https://twitter.com/fortranlang?ref_src=twsrc%5Etfw"></a>
          <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
