Jekyll build, commit 227394c3b95513636f4980c0c18380c363b9b84d (on:push)

--- a/learn/intrinsics/BIT_SIZE.html
+++ b/learn/intrinsics/BIT_SIZE.html
@@ -44954,7 +44954,7 @@ of __i__.  The result is a _integer_ scalar of the same kind as __i__.
 
 <p>Fortran 95 and later</p>
 
-<h6 id="fortran-lang-intrinsic-descriptions-license-mit-urbanjost">fortran-lang intrinsic descriptions (License: MIT) @urbanjost</h6>
+<h6 id="fortran-lang-intrinsic-descriptions-license-mit-urbanjost">fortran-lang intrinsic descriptions (license MIT) @urbanjost</h6>
 
 
       <div class="container-flex">
