--- a/learn/intrinsics/DIM.html
+++ b/learn/intrinsics/DIM.html
@@ -45019,7 +45019,7 @@ otherwise it returns zero.</p>
 
 <p>FORTRAN 77 and later</p>
 
-<h6 id="fortran-lang-intrinsic-descriptions-license-mit">fortran-lang intrinsic descriptions (license: MIT)</h6>
+<h6 id="fortran-lang-intrinsic-descriptions-license-mit-urbanjost">fortran-lang intrinsic descriptions (license: MIT) @urbanjost</h6>
 
 
       <div class="container-flex">
