--- a/learn/intrinsics/ERFC.html
+++ b/learn/intrinsics/ERFC.html
@@ -45039,7 +45039,7 @@ the range</p>
   <li><a href="https://en.wikipedia.org/wiki/Error_function">Wikipedia:error function</a></li>
 </ul>
 
-<h6 id="fortran-lang-intrinsic-descriptions-license-mit">fortran-lang intrinsic descriptions license: MIT)</h6>
+<h6 id="fortran-lang-intrinsic-descriptions-license-mit-urbanjost">fortran-lang intrinsic descriptions license: MIT) @urbanjost</h6>
 
 
       <div class="container-flex">
