--- a/learn/intrinsics/MVBITS.html
+++ b/learn/intrinsics/MVBITS.html
@@ -45255,7 +45255,7 @@ the <strong>len</strong> bits of <strong>from</strong> starting at <strong>fromp
 <a href="IOR"><strong>ior</strong>(3)</a>,
 <a href="IEOR"><strong>ieor</strong>(3)</a></p>
 
-<h6 id="fortran-lang-intrinsic-descriptions-license-mit-urbanjost">fortran-lang intrinsic descriptions (License: MIT) @urbanjost</h6>
+<h6 id="fortran-lang-intrinsic-descriptions-license-mit-urbanjost">fortran-lang intrinsic descriptions (license MIT) @urbanjost</h6>
 
 
 
