--- a/learn/intrinsics/RANGE.html
+++ b/learn/intrinsics/RANGE.html
@@ -45144,7 +45144,7 @@
       </span><span class="kt">integer</span><span class="w"> </span><span class="p">::</span><span class="w"> </span><span class="nb">range</span><span class="w">
       </span><span class="k">type</span><span class="p">(</span><span class="k">TYPE</span><span class="p">,</span><span class="nb">kind</span><span class="o">=</span><span class="nb">KIND</span><span class="p">),</span><span class="k">intent</span><span class="p">(</span><span class="k">in</span><span class="p">)</span><span class="w"> </span><span class="p">::</span><span class="w"> </span><span class="n">x</span><span class="w">
 </span></code></pre></div></div>
-<p>where TYPE is <em>real</em> or <em>cmplpex</em> and KIND is any kind supported by 
+<p>where TYPE is <em>real</em> or <em>complex</em> and KIND is any kind supported by 
    TYPE.</p>
 <h2 id="description"><strong>Description</strong></h2>
 
