site wide search reposition and packages section categories

--- a/source/_templates/index.html
+++ b/source/_templates/index.html
@@ -81,10 +81,6 @@
             <span class="navbar-toggler-icon"></span>
          </button>
          <div id="navbar-collapsible" class=" collapse navbar-collapse">
-            <form class="bd-search d-flex align-items-center" action="search.html" method="get"> <i
-                  class="icon fas fa-search"></i> <input type="search" class="form-control" name="q" id="search-input"
-                  placeholder="Search" aria-label="Search" autocomplete="off"> </form>
-
             <div id="navbar-center" class="ml-auto">
                <div class="navbar-center-item">
                   <ul id="navbar-main-elements" class="navbar-nav">
@@ -142,7 +138,9 @@
                      </li>
                   </ul>
                </div>
-            </div>
+            </div><form class="bd-search d-flex align-items-center" action="search.html" method="get"> <i
+               class="icon fas fa-search"></i> <input type="search" class="form-control" name="q" id="search-input"
+               placeholder="Search" aria-label="Search" autocomplete="off"> </form>
          </div>
       </div>
    </nav>
