--- a/source/_templates/docs-navbar.html
+++ b/source/_templates/docs-navbar.html
@@ -11,9 +11,7 @@
          <span class="navbar-toggler-icon"></span>
       </button>
       <div id="navbar-collapsible" class=" collapse navbar-collapse">
-         <form class="bd-search d-flex align-items-center" action="search.html" method="get"> <i
-               class="icon fas fa-search"></i> <input type="search" class="form-control" name="q" id="search-input"
-               placeholder="Search" aria-label="Search" autocomplete="off"> </form>
+         
          <div id="navbar-center" class="ml-auto">
             <div class="navbar-center-item">
                <ul id="navbar-main-elements" class="navbar-nav">
@@ -75,7 +73,9 @@
                   </li>
                </ul>
             </div>
-         </div>
+         </div><form class="bd-search d-flex align-items-center" action="search.html" method="get"> <i
+            class="icon fas fa-search"></i> <input type="search" class="form-control" name="q" id="search-input"
+            placeholder="Search" aria-label="Search" autocomplete="off"> </form>
       </div>
    </div>
 </nav>
