Dark theme and i18n

--- a/source/_templates/index.html
+++ b/source/_templates/index.html
@@ -160,7 +160,7 @@
       <center>
          <br> <br>
          <h1>High-performance parallel programming language</h1>
-         <p><a href="learn/index.html" class="btn get_started">Get started</a></p>
+         <p><a href="learn.html" class="btn get_started">Get started</a></p>
       </center>
       <div class="row">
          <main class="col-13 col-md-10 col-xl-8 py-md-8 pl-md-8 pr-md-7 bd-content fortran_scroll" role="main">
